# k-hop-neighborhoods-spark

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
sample_data/: mydata.csv
tests/: test_app.py
